# nlr-allorecognition-ml

./: .gitignore  .gitmodules  CITATIONS.md  LICENSE  PIPELINE.md  README.md  pyproject.toml  requirements.txt
data/models/: best_params_per_fold.csv  fold_summary.csv  fold_summary_logistic.csv  fold_summary_loo.csv  fold_summary_supcon.csv  fold_summary_svm.csv  fold_summary_xgb_tuned.csv  grid_full_results.csv  hv_extraction_report.tsv  oof_predictions.csv  oof_predictions_logistic.csv  oof_predictions_loo.csv  oof_predictions_supcon.csv  oof_predictions_svm.csv  oof_predictions_xgb_tuned.csv  pair_index.csv  xgb_feature_importance.csv  xgb_feature_importance_loo.csv
data/models/eval/: all_models_overall.csv  all_models_per_phenotype.csv  ensemble_summary.csv  logistic_per_phenotype.csv  (+7 more)
data/models_hv/: fold_summary.csv  oof_predictions.csv  xgb_feature_importance.csv
scripts/: aggregate_heatmaps.py  build_pair_features.py  build_pair_features_hv.py  check_propellers.py  cif_utils.py  collect_selected.py  compute_embeddings.py  compute_embeddings_per_residue.py  compute_sasa.py  constants.py  contrastive_supcon.py  download_hetc_sequences.py  ensemble_eval.py  generate_af3_inputs.py  generate_af3_wcss.py  make_contact_heatmaps.py  model_evaluation.py  parse_nlr_fasta.py  plot_models_comparison.py  refine_enrichment.py  sasa_utils.py  selection_stats.py  train_lono.py  train_lono_logistic.py  train_lono_svm.py  train_loo.py  validate_af3_contacts.py  validate_af3_contacts_sasa.py  visualize_embeddings_pca.py  visualize_supcon_pca.py  xgb_grid_nested.py
(+24 files in other folders)
